# najdi-slevu

./: .gitignore  SETUP.md  main.py  pyproject.toml  requirements-gmail.txt  requirements.txt  watchlist.example.yaml
.beads/: metadata.json
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0002_canonicalization.py  3a2ff79b0965_initial_schema_v1.py
api/: openapi.yaml
api/fixtures/: auth_login.json  auth_register.json  discounts.json  discounts_id.json  discounts_id_history.json  me_devices_post.json  me_watchlist_get.json  me_watchlist_post.json  supermarkets.json
docs/: ROADMAP.md  gmail-oauth-setup.md  roadmap_beads.md  running.md
ios/NajdiSlevu/: Package.swift
scraper/: __init__.py  brands.txt  canonical.py  cli.py  display.py  filters.py  gmail_client.py  models.py  pdf_parser.py  persistence.py  watchlist.py
scraper/db/: models.py  repo.py  session.py
scripts/: dump_parser_output.py
tests/: conftest.py  test_pdf_parser.py
tests/fixtures/expected/: README.md
tests/fixtures/leaflets/: README.md
tests/integration/: test_pipeline.py
tests/unit/: test_canonical.py  test_cli.py  test_fixtures.py  test_gmail_client.py  test_matcher.py  test_models.py  test_parse_price.py  test_parser_albert.py  test_parser_billa.py  test_parser_kaufland.py  test_parser_lidl.py  test_parser_penny.py  test_parser_tesco.py  test_persistence.py  test_price_history.py  test_query_cli.py  test_repo.py  test_watchlist.py  test_watchlist_cli.py
