[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "najdi-slevu"
version = "0.1.0"
description = "Czech supermarket leaflet discount extractor"
requires-python = ">=3.11"
dependencies = [
    "pdfplumber>=0.11",
    "rich>=13",
    "typer>=0.12",
]

[project.scripts]
najdi-slevu = "scraper.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["scraper*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
