[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "najdi-slevu"
version = "0.1.0"
description = "Czech supermarket leaflet discount extractor"
requires-python = ">=3.11"
dependencies = [
    "pdfplumber>=0.11",
    "rich>=13",
    "typer>=0.12",
    "google-auth>=2.28",
    "google-auth-oauthlib>=1.2",
    "google-api-python-client>=2.120",
    "pyyaml>=6",
    "sqlalchemy>=2",
    "alembic>=1.13",
]

[project.scripts]
najdi-slevu = "scraper.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["scraper*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -W ignore::FutureWarning"
